[gd_scene load_steps=12 format=3 uid="uid://b3ybyrs7c8jy0"]

[ext_resource type="Script" path="res://scripts/pause_menu2_0.gd" id="1_j1c4h"]
[ext_resource type="Shader" path="res://assets/shader/dwa_zero.gdshader" id="2_smiow"]
[ext_resource type="Texture2D" uid="uid://nls4a4hlj37e" path="res://assets/sprites/play_button.png" id="3_c6vl4"]
[ext_resource type="Texture2D" uid="uid://cafytcm21wtui" path="res://assets/sprites/back_button.png" id="4_1miak"]
[ext_resource type="Texture2D" uid="uid://ve7arsf3jqto" path="res://assets/sprites/play_button_pressed.png" id="4_s8sib"]
[ext_resource type="Texture2D" uid="uid://brq4tjuip8coa" path="res://assets/sprites/back_button_hover.png" id="8_32hdt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scph1"]
shader = ExtResource("2_smiow")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_e3pqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aw0wh"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.805]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6pka3"]
_data = {
"RESET": SubResource("Animation_e3pqr"),
"blur": SubResource("Animation_aw0wh")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tnldu"]
load_path = "res://.godot/imported/play_button_hover.png-73780a2c0b97dd99a974b97d7e70650d.ctex"

[node name="Pause_Menu2_0" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_j1c4h")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_scph1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6pka3")
}

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -260.0
offset_right = 260.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_c6vl4")
texture_pressed = ExtResource("4_s8sib")
texture_hover = SubResource("CompressedTexture2D_tnldu")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 2240.0
offset_top = 960.0
offset_right = 2496.0
offset_bottom = 1216.0
texture_normal = ExtResource("4_1miak")
texture_pressed = ExtResource("8_32hdt")
texture_hover = ExtResource("8_32hdt")
ignore_texture_size = true
stretch_mode = 0

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
